# asset_detection

./: CMakeLists.txt  README.md  asset_detection.cc  asset_detection.h  conflict-test.txt  file.txt  main.cc  network_prober.cc  network_prober.h  server.cc  server.h
asset_client/: CMakeLists.txt  check.grpc.pb.h  check.pb.h  client.cpp
grpc/: text.grpc.pb.cc  text.grpc.pb.h
server_cpp/: asset_detection.cc  asset_detection.h  main.cc  network_prober.cc  network_prober.h  server.cc  server.h
server_cpp/grpc/: text.pb.cc  text.pb.h  text.proto
test_code/: CMakeLists.txt  client.cc
test_code/grpc/: check.grpc.pb.cc  check.pb.cc
